--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ main {
     display: block;
 }
 
-/********** Rightb Box CSS **********/
+/********** Right Box CSS **********/
 
 #digitetexto {
     width: 25rem;
